--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 html {
   font-family: Lora, serif;
+  background-image: url("../images/banner.jpg");
 }
 
 .masthead {
   background-image: url("../images/leaf-bg.svg");
+  background-color: #588477;
+  color: #fff;
 }
 
 .logo {
@@ -16,18 +19,23 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  background-color: #467366;
+  border-color: #2d5a4d;
+  border-radius: .5em;
+  border-width: 3px;
+  border-style: solid;
 }
 
 .nav a:hover {
-
+  background-color: #fff;
+  color: #145b1d;
 }
 
 .banner {
-  background-image: url("../images/banner.jpg");
 }
 
 .banner-content {
-
 }
 
 @media only screen and (min-width: 60em) {
