--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,7 @@ html {
 
 .masthead {
   background-image: url("../images/leaf-bg.svg");
-  background-color: #588477;
   background-size: 64px;
-  color: #fff;
   background-color: #588477;
   border-bottom: 3px solid #2d5a4d;
   border-top: 3px solid #2d5a4d;
@@ -24,34 +22,33 @@ html {
 .nav a {
   text-decoration: none;
   color: #fff;
+  border-radius: 8px;
+  border: 3px solid #2d5a4d;
   background-color: #467366;
-  border-color: #2d5a4d;
-  border-radius: .5em;
-  border-width: 3px;
-  border-style: solid;
 }
 
 .nav a:hover {
+  background-image: url("../images/leaf-icon.svg");
   background-color: #fff;
   color: #145b1d;
-  background-image: url("../images/leaf-icon.svg");
   background-size: 64px auto;
   background-repeat: no-repeat;
-  background-position: .75em centre;
+  background-position: .75em center;
 }
 
 .banner {
-  background-image: url("../images/banner.jpg");
+  background-image: linear-gradient(to bottom, transparent, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
   background-size: auto, cover;
-  background-position: bottom, bottom centre; 
+  background-position: bottom, bottom center;
 }
 
 .banner-content {
-  padding top: 300px;
+  padding-top: 300px;
   background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
-  background-size: 110px;
+  background-size: 115px;
   background-position: 1em 8.5em;
+  color: #fff;
 }
 
 @media only screen and (min-width: 60em) {
